--- a/.github/workflows/build-nightly-cron.yaml
+++ b/.github/workflows/build-nightly-cron.yaml
@@ -6,7 +6,8 @@ on:
   push:
     paths:
       - '.github/workflows/build-nightly-cron.yaml'
-
+  workflow_dispatch:
+  
 env:
   SERVER_URL: https://github.com
   REPOSITORY_SPT_SERVER: sp-tarkov/server-csharp
