--- a/.github/workflows/build-nightly-cron.yaml
+++ b/.github/workflows/build-nightly-cron.yaml
@@ -1,7 +1,7 @@
 name: SPT-服务器 每夜构建
 on:
-  schedule:
-    - cron: '30 2 * * *'
+#  schedule:
+#    - cron: '30 2 * * *'
   push:
     paths:
       - '.github/workflows/build-nightly-cron.yaml'
